@@ -9,6 +9,7 @@ package er.extensions.appserver;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
@@ -58,6 +59,7 @@ import com.webobjects.appserver.WOResponse;
 import com.webobjects.appserver.WOSession;
 import com.webobjects.appserver.WOTimer;
 import com.webobjects.appserver._private.WOComponentDefinition;
+import com.webobjects.appserver._private.WODeployedBundle;
 import com.webobjects.appserver._private.WOProperties;
 import com.webobjects.eocontrol.EOEditingContext;
 import com.webobjects.eocontrol.EOObserverCenter;
@@ -81,6 +83,7 @@ import com.webobjects.foundation.NSRange;
 import com.webobjects.foundation.NSSelector;
 import com.webobjects.foundation.NSSet;
 import com.webobjects.foundation.NSTimestamp;
+import com.webobjects.foundation.development.NSBundleFactory;
 
 import er.extensions.ERXExtensions;
 import er.extensions.ERXFrameworkPrincipal;
@@ -354,9 +357,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	private static Loader _loader;
 
 	/**
-	 * Responsible for classpath munging.
+	 * Responsible for classpath munging and ensuring all bundles are loaded
 	 * 
-	 *
+	 * @property er.extensions.appserver.projectBundleLoading - to see logging this has to be set on the command line by using -Der.extensions.appserver.projectBundleLoading=DEBUG
+	 * 
 	 * @author ak
 	 */
 	public static class Loader {
@@ -418,8 +422,9 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 				return bundle.properties();
 			}
 
+			InputStream inputStream = null;
 			try {
-				InputStream inputStream = bundle.inputStreamForResourcePath(name);
+				inputStream = bundle.inputStreamForResourcePath(name);
 				if(inputStream == null) {
 					return null;
 				}
@@ -434,6 +439,10 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			}
 			catch (IOException exception) {
 				return null;
+			} finally {
+				if (inputStream != null) {
+					try { inputStream.close(); } catch (IOException e) {}
+				}
 			}
 		}
 
@@ -473,7 +482,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 						else if (fixedJar.matches(frameworkPattern) || fixedJar.matches(appPattern) || fixedJar.matches(folderPattern)) {
 							normalLibs += jar + File.pathSeparator;
 						}
-						else if (fixedJar.matches(projectPattern) || fixedJar.matches(".*?/ERFoundation.jar") || fixedJar.matches(".*?/ERWebObjects.jar")) {
+						else if (fixedJar.matches(projectPattern) || fixedJar.matches(".*?/erfoundation.jar") || fixedJar.matches(".*?/erwebobjects.jar")) {
 							normalLibs += jar + File.pathSeparator;
 						}
 						else {
@@ -527,8 +536,20 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 										}
 										if (isBundle) {
 											System.setProperty("NSProjectBundleEnabled", "true");
-											allFrameworks.add(classpathFolder.getName());
-											debugMsg("Added Binary Bundle: " + allFrameworks);
+											String bundleName = classpathFolder.getName();
+
+											File buildPropertiesFile = new File(classpathFolder, "build.properties");
+											if (buildPropertiesFile.exists()) {
+												Properties buildProperties = new Properties();
+												buildProperties.load(new FileReader(buildPropertiesFile));
+												if (buildProperties.get("project.name") != null) {
+													// the project folder might be named differently than the actual bundle name
+													bundleName = (String) buildProperties.get("project.name");
+												}
+											}
+											
+											allFrameworks.add(bundleName);
+											debugMsg("Added Binary Bundle (Project bundle): " + bundleName);
 										} else {
 											debugMsg("Skipping binary bundle: " + jar);
 										}
@@ -566,11 +587,14 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 					}
 				}
 			}
-			NSNotificationCenter.defaultCenter().addObserver(this, new NSSelector("bundleDidLoad", new Class[] { NSNotification.class }), "NSBundleDidLoadNotification", null);
+			NSNotificationCenter.defaultCenter().addObserver(this, new NSSelector("bundleDidLoad", ERXConstant.NotificationClassArray), "NSBundleDidLoadNotification", null);
 		}
 		
+		// for logging before logging has been setup and configured by loading the properties files
 		private void debugMsg(String msg) {
-			// System.out.println(msg);
+			if ("DEBUG".equals(System.getProperty("er.extensions.appserver.projectBundleLoading"))) {
+				System.out.println(msg); 
+			}
 		}
 		
 		public boolean didLoad() {
@@ -589,6 +613,13 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 			if (mainBundle == null) {
 				// AK: when we get here, the main bundle wasn't inited yet
 				// so we do it ourself...
+				
+				if (isDevelopmentModeSafe() && 
+						ERXConfigurationManager.defaultManager().isDeployedAsServlet()) {
+					// bundle-less builds do not appear to work when running in servlet mode, so make it prefer the legacy bundle style 
+					NSBundleFactory.registerBundleFactory(new com.webobjects.foundation.development.NSLegacyBundle.Factory());
+				}
+				
 				try {
 					Field ClassPath = NSBundle.class.getDeclaredField("ClassPath");
 					ClassPath.setAccessible(true);
@@ -623,8 +654,12 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		
 		public void bundleDidLoad(NSNotification n) {
 			NSBundle bundle = (NSBundle) n.object();
-			// System.out.println(bundle.name() + ": " + allFrameworks);
-			allFrameworks.remove(bundle.name());
+			if (allFrameworks.contains(bundle.name())) {
+				allFrameworks.remove(bundle.name());
+				debugMsg("Loaded " + bundle.name() + ". Remaining: " + allFrameworks);
+			} else if (bundle.isFramework()) {
+				debugMsg("Loaded unexpected framework bundle '" + bundle.name() + "'. Ensure your build.properties settings like project.name match the bundle name (including case).");
+			}
 			if (allBundleProps == null) {
 				allBundleProps = new Properties();
 			}
@@ -1087,10 +1122,21 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	}
 
 	/**
-	 * The ERXApplication contructor.
+	 * The ERXApplication constructor.
 	 */
 	public ERXApplication() {
 		super();
+		
+		/* 
+		 * ERXComponentRequestHandler is a patched version of the original WOComponentRequestHandler
+		 * This method will tell Application to used the patched, the patched version will disallow direct component access by name
+		 * If you want to use the unpatched version set the property ERXDirectComponentAccessAllowed to true
+		 */
+		if (!ERXProperties.booleanForKeyWithDefault("ERXDirectComponentAccessAllowed", false)) {
+			ERXComponentRequestHandler erxComponentRequestHandler = new ERXComponentRequestHandler();
+			registerRequestHandler(erxComponentRequestHandler, componentRequestHandlerKey());
+		}
+		
 		ERXStats.initStatisticsIfNecessary();
 
 		// WOFrameworksBaseURL and WOApplicationBaseURL properties are broken in 5.4.  
@@ -1107,10 +1153,15 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 		if (!ERXConfigurationManager.defaultManager().isDeployedAsServlet() && (!wasERXApplicationMainInvoked || _loader == null)) {
 			_displayMainMethodWarning();
 		}
+		// try {
+		// 	NSBundle.mainBundle().versionString();
+		// } catch (NoSuchMethodError e) {
+		// 	throw new RuntimeException("No versionString() method in NSBundle found. \nThis means your class path is incorrect. Adjust it so that ERJars comes before JavaFoundation.");
+		// }
 		if (_loader == null) {
 			System.out.println("No loader: " + System.getProperty("java.class.path"));
 		} else if (!_loader.didLoad()) {
-			throw new RuntimeException("ERXExtensions have not been initialized. Please report the classpath and the rest of the bundles to the Wonder mailing list: " + "\nRemaining frameworks: " + (_loader == null ? "none" : _loader.allFrameworks) + "\nClasspath: " + System.getProperty("java.class.path"));
+			throw new RuntimeException("ERXExtensions have not been initialized. Debugging information can be enabled by adding the JVM argument: '-Der.extensions.appserver.projectBundleLoading=DEBUG'. Please report the classpath and the rest of the bundles to the Wonder mailing list: " + "\nRemaining frameworks: " + (_loader == null ? "none" : _loader.allFrameworks) + "\nClasspath: " + System.getProperty("java.class.path"));
 		}
 		if ("JavaFoundation".equals(NSBundle.mainBundle().name())) {
 			throw new RuntimeException("Your main bundle is \"JavaFoundation\".  You are not launching this WO application properly.  If you are using Eclipse, most likely you launched your WOA as a \"Java Application\" instead of a \"WO Application\".");
@@ -1216,8 +1267,9 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * Decides whether to use editing context unlocking.
 	 * 
 	 * @return true if ECs should be unlocked after each RR-loop
-	 * @deprecated use er.extensions.ERXEC.useUnlocker property instead
+	 * @deprecated use {@link ERXEC#useUnlocker()}
 	 */
+	@Deprecated
 	public Boolean useEditingContextUnlocker() {
 		Boolean useUnlocker = null;
 		if (ERXProperties.stringForKey("er.extensions.ERXApplication.useEditingContextUnlocker") != null) {
@@ -1230,8 +1282,9 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * Decides whether or not to keep track of open editing context locks.
 	 * 
 	 * @return true if editing context locks should be tracked
-	 * @deprecated use er.extensions.ERXEC.traceOpenLocks property instead
+	 * @deprecated use {@link ERXEC#traceOpenLocks()}
 	 */
+	@Deprecated
 	public Boolean traceOpenEditingContextLocks() {
 		Boolean traceOpenLocks = null;
 		if (ERXProperties.stringForKey("er.extensions.ERXApplication.traceOpenEditingContextLocks") != null) {
@@ -1744,6 +1797,8 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * Also, in case the top-level exception was a EOGeneralAdaptorException,
 	 * then you also get the failed ops and the sql exception. <br/>
 	 * 
+	 * @param e exception
+	 * @param context the current context
 	 * @return dictionary containing extra information for the current context.
 	 */
 	public NSMutableDictionary extraInformationForExceptionInContext(Exception e, WOContext context) {
@@ -1755,7 +1810,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 	/**
 	 * Reports an exception. This method only logs the error and could be
-	 * overriden to return a valid error page.
+	 * overridden to return a valid error page.
 	 * 
 	 * @param exception
 	 *            to be reported
@@ -2042,7 +2097,6 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * @return response
 	 */
 	@Override
-
 	public WOResponse dispatchRequest(WORequest request) {
 		WOResponse response = null;
 		ERXDelayedRequestHandler delayedRequestHandler = delayedRequestHandler();
@@ -2287,6 +2341,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	 * Returns whether or not this application is running in development-mode.
 	 * If you are using Xcode, you should add a WOIDE=Xcode setting to your
 	 * launch parameters.
+	 * @return <code>true</code> if application is in dev mode
 	 */
 	public boolean isDevelopmentMode() {
 		return ERXApplication._defaultIsDevelopmentMode();
@@ -2388,7 +2443,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	}
 
 	public Number sessionTimeOutInMinutes() {
-		return new Integer(sessionTimeOut().intValue() / 60);
+		return Integer.valueOf(sessionTimeOut().intValue() / 60);
 	}
 
 	protected static final ERXFormatterFactory _formatterFactory = new ERXFormatterFactory();
@@ -2433,6 +2488,7 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 
 	/**
 	 * Returns an ERXMigrator with the lock owner name "appname-instancenumber".
+	 * @return migrator for this instance
 	 */
 	public ERXMigrator migrator() {
 		return new ERXMigrator(name() + "-" + host() + ":" + port());
@@ -2472,6 +2528,20 @@ public abstract class ERXApplication extends ERXAjaxApplication implements ERXGr
 	      processedURL = processedURL.replaceFirst(_replaceApplicationPathPattern, _replaceApplicationPathReplace);
 	    }
 		return processedURL;
+	}
+
+	/**
+	 * This method is called by ERXResourceManager and provides the application a hook
+	 * to rewrite generated URLs for resources.
+	 *
+	 * @param url
+	 *            the URL to rewrite
+	 * @param bundle
+	 *            the bundle the resource is located in
+	 * @return the rewritten URL
+	 */
+	public String _rewriteResourceURL(String url, WODeployedBundle bundle) {
+	    return url;
 	}
 
 	/**
