@@ -1,4 +1,6 @@
 package er.extensions.components;
+
+import java.io.Serializable;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
@@ -39,18 +41,30 @@ import er.extensions.foundation.ERXAssert;
  * @binding entryName the name to cache on
  *
  * @author ak on 20.01.05
- * @project ERExtensions
  */
-
 //ENHANCEME cache should get reaped every so often and remove stale entries. 
-
 public class ERXCachingWrapper extends ERXStatelessComponent {
+	/**
+	 * Do I need to update serialVersionUID?
+	 * See section 5.6 <cite>Type Changes Affecting Serialization</cite> on page 51 of the 
+	 * <a href="http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf">Java Object Serialization Spec</a>
+	 */
+	private static final long serialVersionUID = 1L;
+
 
     /** logging support */
     private static final Logger log = Logger.getLogger(ERXCachingWrapper.class);
 
     /** The cached entries */
     protected static Map cache = Collections.synchronizedMap(new HashMap() {
+    	/**
+    	 * Do I need to update serialVersionUID?
+    	 * See section 5.6 <cite>Type Changes Affecting Serialization</cite> on page 51 of the 
+    	 * <a href="http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf">Java Object Serialization Spec</a>
+    	 */
+    	private static final long serialVersionUID = 1L;
+
+    	@Override
     	public Object get(Object key) {
     		Entry result = (Entry) super.get(key);
     		if(result != null) {
@@ -64,7 +78,14 @@ public class ERXCachingWrapper extends ERXStatelessComponent {
     });
     
     /** Simply cache entry class. It caches a string for a duration and can replace the session ID on retrieval. */
-    protected class Entry {
+    protected static class Entry implements Serializable{
+    	/**
+    	 * Do I need to update serialVersionUID?
+    	 * See section 5.6 <cite>Type Changes Affecting Serialization</cite> on page 51 of the 
+    	 * <a href="http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf">Java Object Serialization Spec</a>
+    	 */
+    	private static final long serialVersionUID = 1L;
+
     	private long insertTime;
     	private long duration;
     	private String content;
@@ -103,6 +124,7 @@ public class ERXCachingWrapper extends ERXStatelessComponent {
         super(context);
     }
     
+    @Override
     public void awake() {
     	super.awake();
     	keys = null;
@@ -172,9 +194,9 @@ public class ERXCachingWrapper extends ERXStatelessComponent {
         if(cacheDuration == null) {
             Number value = (Number)valueForBinding("duration");
             if(value == null) {
-                cacheDuration = new Long(60L*1000L);
+                cacheDuration = Long.valueOf(60L*1000L);
             } else {
-                cacheDuration = new Long(value.longValue());
+                cacheDuration = Long.valueOf(value.longValue());
             }
         }
         return cacheDuration.longValue();
@@ -196,12 +218,14 @@ public class ERXCachingWrapper extends ERXStatelessComponent {
     	return values;
     }
     
+    @Override
 	public void takeValuesFromRequest(WORequest request, WOContext context) {
 		if(entry == null) {
 			super.takeValuesFromRequest(request, context);
 		}
 	}
 	
+    @Override
 	public WOActionResults invokeAction(WORequest request, WOContext context) {
 		if(entry == null) {
 			return super.invokeAction(request, context);
@@ -209,6 +233,7 @@ public class ERXCachingWrapper extends ERXStatelessComponent {
 		return null;
 	}
 	
+    @Override
 	public void appendToResponse(WOResponse response, WOContext context) {
 		if(entry == null) {
 			WOResponse newResponse = application().createResponseInContext(context);
