@@ -1,17 +1,13 @@
-//
-// NSTimestampUtilities.java
-// Project vwdBussinessLogicJava
-//
-// Created by ak on Wed Jun 06 2001
-//
 package er.extensions.foundation;
 
+import java.sql.Timestamp;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
 import java.util.GregorianCalendar;
 
 import com.webobjects.foundation.NSComparator;
+import com.webobjects.foundation.NSTimeZone;
 import com.webobjects.foundation.NSTimestamp;
 
 /**
@@ -214,9 +210,10 @@ public class ERXTimestampUtilities extends Object {
     /**
      * Cover method for returning DistantPast
      * off of NSTimestamp.
-     * @deprecated use <code>NSTimestamp.DistantPast</code> instead
+     * @deprecated use {@link NSTimestamp#DistantPast}
      * @return a date in the distant past
      */
+    @Deprecated
     public static NSTimestamp distantPast() {
        return NSTimestamp.DistantPast;
     }
@@ -224,16 +221,18 @@ public class ERXTimestampUtilities extends Object {
     /**
      * Cover method for returning DistantFuture
      * off of NSTimestamp.
-     * @deprecated use <code>NSTimestamp.DistantFuture</code> instead
+     * @deprecated use {@link NSTimestamp#DistantFuture}
      * @return a date in the distant future
-     */    
+     */   
+    @Deprecated 
     public static NSTimestamp distantFuture() {
         return NSTimestamp.DistantFuture;
     }
 
     /**
-     * @deprecated use <code>timestampByAddingTime</code> instead
+     * @deprecated use {@link #timestampByAddingTime(NSTimestamp, NSTimestamp)}
      */
+    @Deprecated
     public static NSTimestamp dateByAddingTime(NSTimestamp ts, NSTimestamp t1) {
         ERXTimestamp time = getInstance(t1);
         return ts.timestampByAddingGregorianUnits(0, 0, 0, time.hourOfDay(), time.minuteOfHour(), time.secondOfMinute());
@@ -254,24 +253,26 @@ public class ERXTimestampUtilities extends Object {
 
     /**
      * Compares two timestamps.
-     * @deprecated use <code>java.sql.Timestamp.before<code> instead.
+     * @deprecated use {@link Timestamp#before(Timestamp)}
      * @param ts1 first timestamp
      * @param ts2 second timestamp
      * @return true if the the second timestamp is earlier than the
      *		first timestamp.
      */
+    @Deprecated
     public static boolean isEarlierThan(NSTimestamp ts1, NSTimestamp ts2) {
         return ts1.compare(ts2) == NSComparator.OrderedAscending;
     }
 
     /**
      * Compares two timestamps.
-     * @deprecated use <code>java.sql.Timestamp.after<code> instead.
+     * @deprecated use {@link Timestamp#after(Timestamp)}
      * @param ts1 first timestamp
      * @param ts2 second timestamp
      * @return true if the the second timestamp is later than the
      *		first timestamp.
      */
+    @Deprecated
     public static boolean isLaterThan(NSTimestamp ts1, NSTimestamp ts2) {
         return ts1.compare(ts2) == NSComparator.OrderedDescending;
     }    
@@ -311,7 +312,7 @@ public class ERXTimestampUtilities extends Object {
     public static Integer unixTimestamp(NSTimestamp ts) {
         long seconds = 0;
         seconds = ts.getTime() - epoch().getTime();
-        return (new Integer((int)((seconds-60*60)/1000L)));
+        return Integer.valueOf((int)((seconds-60*60)/1000L));
     }
     
     /**
@@ -408,5 +409,120 @@ public class ERXTimestampUtilities extends Object {
     		}
     	}
     	return dateFormat.toString();
+    }
+    
+    public static GregorianCalendar calendarForTimestamp(NSTimestamp t) {
+        GregorianCalendar calendar = (GregorianCalendar) Calendar.getInstance();
+        calendar.setTime(t);
+        return calendar;
+    }
+
+    public static long offsetForDateInCommonEra(NSTimestamp t, int mode) {
+        GregorianCalendar calendar = calendarForTimestamp(t);
+        switch(mode) {
+            case Calendar.YEAR:
+                return calendar.get(Calendar.YEAR);
+            case Calendar.MONTH:
+                return calendar.get(Calendar.YEAR) * 12 + calendar.get(Calendar.MONTH);
+            case Calendar.WEEK_OF_YEAR:
+                return calendar.get(Calendar.YEAR) * 52 + calendar.get(Calendar.WEEK_OF_YEAR);
+            case Calendar.DAY_OF_MONTH:
+            case Calendar.DAY_OF_YEAR:
+                return calendar.get(Calendar.YEAR) * 365 + calendar.get(Calendar.DAY_OF_YEAR);
+            case Calendar.HOUR_OF_DAY:
+            case Calendar.HOUR:
+                return (calendar.get(Calendar.YEAR) * 365 + calendar.get(Calendar.DAY_OF_YEAR)) * 24 + calendar.get(Calendar.HOUR_OF_DAY);
+            default:
+                return 0;
+        }
+    }
+
+    public static long differenceByDay(NSTimestamp t1, NSTimestamp t2) {
+        return compareDatesInCommonEra(t1, t2, Calendar.DAY_OF_YEAR);
+    }
+
+    public static long differenceByWeek(NSTimestamp t1, NSTimestamp t2) {
+        return compareDatesInCommonEra(t1, t2, Calendar.WEEK_OF_YEAR);
+    }
+
+    public static long differenceByMonth(NSTimestamp t1, NSTimestamp t2) {
+        return compareDatesInCommonEra(t1, t2, Calendar.MONTH);
+    }
+
+    public static long differenceByYear(NSTimestamp t1, NSTimestamp t2) {
+        return compareDatesInCommonEra(t1, t2, Calendar.YEAR);
+    }
+
+    public static NSTimestamp firstDateInSameWeek(NSTimestamp value) {
+        return new NSTimestamp(yearOfCommonEra(value), monthOfYear(value), -dayOfWeek(value) + 1, 0, 0, 0, NSTimeZone.defaultTimeZone());
+    }
+
+    public static NSTimestamp firstDateInSameMonth(NSTimestamp value) {
+        return new NSTimestamp(yearOfCommonEra(value), monthOfYear(value), -dayOfMonth(value) + 1, 0, 0, 0, NSTimeZone.defaultTimeZone());
+    }
+    
+    public static NSTimestamp firstDateInNextMonth(NSTimestamp value) {
+        return firstDateInSameMonth(value).timestampByAddingGregorianUnits(0, 1, 0, 0, 0, 0);
+    }
+    
+    public static long compareDatesInCommonEra(NSTimestamp t1, NSTimestamp t2, int mode) {
+        return offsetForDateInCommonEra(t2, mode) - offsetForDateInCommonEra(t1, mode);
+    }
+
+    public static int dayOfCommonEra(NSTimestamp t) {
+        return yearOfCommonEra(t) * 365 + dayOfYear(t);
+    }
+
+    public static int monthOfCommonEra(NSTimestamp t) {
+        return yearOfCommonEra(t) * 12 + monthOfYear(t);
+    }
+
+    public static int weekOfCommonEra(NSTimestamp t) {
+        return yearOfCommonEra(t) * 12 + weekOfYear(t);
+    }
+
+    public static boolean isWeekDay(NSTimestamp t) {
+        int day = dayOfWeek(t);
+        return !((day == Calendar.SATURDAY) || (day == Calendar.SUNDAY));
+    }
+
+    public static int dayOfWeek(NSTimestamp t) {
+        return calendarForTimestamp(t).get(Calendar.DAY_OF_WEEK);        
+    }
+
+    public static int dayOfMonth(NSTimestamp t) {
+        return calendarForTimestamp(t).get(Calendar.DAY_OF_MONTH);
+    }
+
+    public static int weekOfYear(NSTimestamp t) {
+        return calendarForTimestamp(t).get(Calendar.WEEK_OF_YEAR);
+    }    
+
+    public static int weekOfMonth(NSTimestamp t) {
+        return calendarForTimestamp(t).get(Calendar.WEEK_OF_MONTH);
+    }
+
+    public static int dayOfYear(NSTimestamp t) {
+        return calendarForTimestamp(t).get(Calendar.DAY_OF_YEAR);
+    }
+
+    public static int hourOfDay(NSTimestamp t) {
+        return calendarForTimestamp(t).get(Calendar.HOUR_OF_DAY);
+    }
+
+    public static int minuteOfHour(NSTimestamp t) {
+        return calendarForTimestamp(t).get(Calendar.MINUTE);        
+    }
+
+    public static int secondOfMinute(NSTimestamp t) {
+        return calendarForTimestamp(t).get(Calendar.SECOND);        
+    }
+
+    public static int monthOfYear(NSTimestamp t) {
+        return calendarForTimestamp(t).get(Calendar.MONTH);        
+    }
+
+    public static int yearOfCommonEra(NSTimestamp t) {
+        return calendarForTimestamp(t).get(Calendar.YEAR);
     }
 }
