@@ -86,7 +86,7 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 			try {
 				EOModel dbUpdaterModel = dbUpdaterModelWithModel(model, adaptor);
 				NSMutableDictionary<String, Object> row = new NSMutableDictionary<String, Object>();
-				row.setObjectForKey(new Integer(1), "updateLock");
+				row.setObjectForKey(Integer.valueOf(1), "updateLock");
 				row.setObjectForKey(lockOwnerName, "lockOwner");
 				EOEntity dbUpdaterEntity = dbUpdaterModel.entityNamed(migrationTableName(adaptor));
 				try {
@@ -107,7 +107,7 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 					}
 					if (nextRow == null) {
 						if (createIfMissing()) {
-							row.setObjectForKey(new Integer(initialVersionForModel(model)), "version");
+							row.setObjectForKey(Integer.valueOf(initialVersionForModel(model)), "version");
 							row.setObjectForKey(model.name(), "modelName");
 							try {
 								channel.insertRow(row, dbUpdaterEntity);
@@ -150,8 +150,6 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 				try {
 					log.warn("Locking failed, but this might be OK if this is the first time you are running migrations.  If things keep running, it probably worked fine.  The original reason for the failure: ", e);
 					ERXJDBCUtilities.executeUpdateScript(channel, createTableStatement);
-					String uniqueModelNameIndex = ERXSQLHelper.newSQLHelper(model).sqlForCreateUniqueIndex("unique_model", migrationTableName(adaptor), "modelname");
-					ERXJDBCUtilities.executeUpdateScript(channel, uniqueModelNameIndex);
 					return _tryLock(channel, model, lockOwnerName, false);
 				}
 				catch (Throwable t) {
@@ -173,7 +171,7 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 		try {
 			EOModel dbUpdaterModel = dbUpdaterModelWithModel(model, adaptor);
 			NSMutableDictionary<String, Object> row = new NSMutableDictionary<String, Object>();
-			row.setObjectForKey(new Integer(0), "updateLock");
+			row.setObjectForKey(Integer.valueOf(0), "updateLock");
 			row.setObjectForKey(NSKeyValueCoding.NullValue, "lockOwner");
 			EOEntity dbUpdaterEntity = dbUpdaterModel.entityNamed(migrationTableName(adaptor));
 			channel.adaptorContext().commitTransaction();
@@ -246,7 +244,7 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 		try {
 			EOModel dbUpdaterModel = dbUpdaterModelWithModel(model, adaptor);
 			NSMutableDictionary<String, Object> row = new NSMutableDictionary<String, Object>();
-			row.setObjectForKey(new Integer(versionNumber), "version");
+			row.setObjectForKey(Integer.valueOf(versionNumber), "version");
 			EOEntity dbUpdaterEntity = dbUpdaterModel.entityNamed(migrationTableName(adaptor));
 			int count;
 			try {
@@ -307,6 +305,7 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 			modelNameAttribute.setWidth(100);
 			modelNameAttribute.setAllowsNull(false);
 			dbUpdaterEntity.addAttribute(modelNameAttribute);
+			dbUpdaterEntity.setPrimaryKeyAttributes(new NSArray<EOAttribute>(modelNameAttribute));
 
 			EOAttribute versionAttribute = new EOAttribute();
 			if (isWonderPrototype) {
@@ -363,7 +362,7 @@ public class ERXJDBCMigrationLock implements IERXMigrationLock {
 		flags.setObjectForKey("NO", EOSchemaGeneration.DropPrimaryKeySupportKey);
 		flags.setObjectForKey("YES", EOSchemaGeneration.CreateTablesKey);
 		flags.setObjectForKey("NO", EOSchemaGeneration.CreatePrimaryKeySupportKey);
-		flags.setObjectForKey("NO", EOSchemaGeneration.PrimaryKeyConstraintsKey);
+		flags.setObjectForKey("YES", EOSchemaGeneration.PrimaryKeyConstraintsKey);
 		flags.setObjectForKey("NO", EOSchemaGeneration.ForeignKeyConstraintsKey);
 		flags.setObjectForKey("NO", EOSchemaGeneration.CreateDatabaseKey);
 		flags.setObjectForKey("NO", EOSchemaGeneration.DropDatabaseKey);
