@@ -26,6 +26,11 @@ import er.extensions.appserver.ERXSession;
 import er.extensions.eof.ERXEC;
 import er.extensions.eof.ERXObjectStoreCoordinator;
 import er.extensions.foundation.ERXProperties;
+import er.extensions.statistics.store.ERXDumbStatisticsStoreListener;
+import er.extensions.statistics.store.ERXEmptyRequestDescription;
+import er.extensions.statistics.store.ERXNormalRequestDescription;
+import er.extensions.statistics.store.IERXRequestDescription;
+import er.extensions.statistics.store.IERXStatisticsStoreListener;
 
 /**
  * Enhances the normal stats store with a bunch of useful things which get
@@ -46,7 +51,7 @@ import er.extensions.foundation.ERXProperties;
  * @property er.extensions.ERXStatisticsStore.milliSeconds.fatal defaults to 5 minutes
  *
  * @author ak
- * @author kieran (Oct 14, 2009) - minor changes to capture thread name in middle of the request (useful for {@link ERXSession#threadName()}
+ * @author kieran (Oct 14, 2009) - minor changes to capture thread name in middle of the request (useful for {@link ERXSession#threadName()}}
  */
 public class ERXStatisticsStore extends WOStatisticsStore {
 
@@ -58,7 +63,23 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 		return _timer;
 	}
 
-	/**
+    private final IERXStatisticsStoreListener listener;
+
+    public ERXStatisticsStore() {
+        listener = new ERXDumbStatisticsStoreListener();
+    }
+
+    /**
+     * Create a statistics store with a custom listener. For example this listener might
+     * notify an external system when a response is very slow in coming.
+     * 
+     * @param listener a customer listener to do something 'special' when requests are slow
+     */
+    public ERXStatisticsStore(IERXStatisticsStoreListener listener) {
+        this.listener = listener;
+    }
+
+    /**
 	 * Thread that checks each second for running requests and makes a snapshot
 	 * after a certain amount of time has expired.
 	 * 
@@ -67,9 +88,10 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 	 */
 	class StopWatchTimer implements Runnable {
 
-		long maximumRequestErrorTime;
-		long maximumRequestWarnTime;
-		long maximumRequestFatalTime;
+		long _maximumRequestErrorTime;
+		long _maximumRequestWarnTime;
+		long _maximumRequestFatalTime;
+		long _lastLog;
 
 		Map<Thread, Long> _requestThreads = new WeakHashMap<Thread, Long>();
 		Map<Thread, Map<Thread, StackTraceElement[]>> _warnTraces = Collections.synchronizedMap(new WeakHashMap<Thread, Map<Thread, StackTraceElement[]>>());
@@ -83,9 +105,9 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 			Thread timerThread = new Thread(this);
 			timerThread.setDaemon(true);
 			timerThread.start();
-			maximumRequestWarnTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.warn", 2000L);
-			maximumRequestErrorTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.error", 10000L);
-			maximumRequestFatalTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.fatal", 5 * 60 * 1000L);
+			_maximumRequestWarnTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.warn", 2000L);
+			_maximumRequestErrorTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.error", 10000L);
+			_maximumRequestFatalTime = ERXProperties.longForKeyWithDefault("er.extensions.ERXStatisticsStore.milliSeconds.fatal", 5 * 60 * 1000L);
 		}
 
 		private long time() {
@@ -101,6 +123,7 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 				if (hasTimerStarted()) {
 					requestTime = System.currentTimeMillis() - time();
 				}
+				
 				Thread currentThread = Thread.currentThread();
 				Map<Thread, StackTraceElement[]> traces = _fatalTraces.remove(currentThread);
 				Map<Thread, String> names = _fatalTracesNames.remove(currentThread);
@@ -112,20 +135,31 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 					traces = _warnTraces.remove(currentThread);
 					names = _warnTracesNames.remove(currentThread);
 				}
-				String trace = stringFromTraces(traces, names);
+				
 				synchronized (_requestThreads) {
 					_requestThreads.remove(Thread.currentThread());
 				}
-				if (requestTime > maximumRequestFatalTime) {
-					String requestDescription = aContext == null ? aString : descriptionForContext(aContext);
+				
+				// Don't get the traces string if we have already logged all
+				// of the stacks within the last 10s. All of this logging
+				// could just makes it worse for an application that is 
+				// already struggling.
+				String trace = " - (skipped stack traces)";
+				long currentTime = System.currentTimeMillis();
+				if (currentTime - _lastLog > 10000) {
+					trace = stringFromTracesAndNames(traces, names);
+					_lastLog = currentTime;
+				}
+			
+                IERXRequestDescription requestDescription = descriptionObjectForContext(aContext, aString);
+                listener.log(requestTime, requestDescription);
+				if (requestTime > _maximumRequestFatalTime) {
 					log.fatal("Request did take too long : " + requestTime + "ms request was: " + requestDescription + trace);
 				}
-				else if (requestTime > maximumRequestErrorTime) {
-					String requestDescription = aContext == null ? aString : descriptionForContext(aContext);
+				else if (requestTime > _maximumRequestErrorTime) {
 					log.error("Request did take too long : " + requestTime + "ms request was: " + requestDescription + trace);
 				}
-				else if (requestTime > maximumRequestWarnTime) {
-					String requestDescription = aContext == null ? aString : descriptionForContext(aContext);
+				else if (requestTime > _maximumRequestWarnTime) {
 					log.warn("Request did take too long : " + requestTime + "ms request was: " + requestDescription + trace);
 				}
 			}
@@ -135,7 +169,7 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 			}
 		}
 
-		private String stringFromTraces(Map<Thread, StackTraceElement[]> traces, Map<Thread, String> names) {
+		private String stringFromTracesAndNames(Map<Thread, StackTraceElement[]> traces, Map<Thread, String> names) {
 			String trace = null;
 			if (traces != null) {
 				String capturedThreadName = null;
@@ -189,28 +223,36 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 		protected void startTimer() {
 			if (!hasTimerStarted()) {
 				synchronized (_requestThreads) {
-					_requestThreads.put(Thread.currentThread(), new Long(System.currentTimeMillis()));
+					_requestThreads.put(Thread.currentThread(), Long.valueOf(System.currentTimeMillis()));
 				}
 			}
 		}
 
-		public String descriptionForContext(WOContext aContext) {
-			try {
-				WOComponent component = aContext.page();
-				String componentName = component != null ? component.name() : "NoNameComponent";
-				String additionalInfo = "(no additional Info)";
-				WORequest request = aContext.request();
-				String requestHandler = request != null ? request.requestHandlerKey() : "NoRequestHandler";
-				if (!requestHandler.equals("wo")) {
-					additionalInfo = additionalInfo + aContext.request().uri();
-				}
-				return componentName + "-" + requestHandler + additionalInfo;
-			}
-			catch (RuntimeException e) {
-				log.error("Cannot get context description since received exception " + e, e);
-			}
-			return "Error-during-context-description";
+		public String descriptionForContext(WOContext aContext, String string) {
+			return descriptionObjectForContext(aContext, string).toString();
 		}
+
+        public IERXRequestDescription descriptionObjectForContext(WOContext aContext, String string) {
+            if (aContext != null) {
+                try {
+                    WOComponent component = aContext.page();
+                    String componentName = component != null ? component.name() : "NoNameComponent";
+                    String additionalInfo = "(no additional Info)";
+                    WORequest request = aContext.request();
+                    String requestHandler = request != null ? request.requestHandlerKey() : "NoRequestHandler";
+                    if (!requestHandler.equals("wo")) {
+                        additionalInfo = additionalInfo + aContext.request().uri();
+                    }
+                    return new ERXNormalRequestDescription(componentName, requestHandler, additionalInfo);
+                }
+                catch (RuntimeException e) {
+                    log.error("Cannot get context description since received exception " + e, e);
+                }
+            }
+            return new ERXEmptyRequestDescription(string);
+        }
+
+
 
 		public void run() {
 			Thread.currentThread().setName("ERXStopWatchTimer");
@@ -232,35 +274,45 @@ public class ERXStatisticsStore extends WOStatisticsStore {
 	            requestThreads.putAll(_requestThreads);
 			}
 			if (!requestThreads.isEmpty()) {
+                int deadlocksCount = 0;
+				Map traces = null; 
 				for (Iterator iterator = requestThreads.keySet().iterator(); iterator.hasNext();) {
 					Thread thread = (Thread) iterator.next();
 					Long time = requestThreads.get(thread);
 					if (time != null) {
 						time = System.currentTimeMillis() - time;
-						if (time > maximumRequestWarnTime/2 && _warnTraces.get(thread) == null) {
-							Map traces = Thread.getAllStackTraces();
+						if (time > _maximumRequestWarnTime/2 && _warnTraces.get(thread) == null) {
+							if(traces == null) {
+								traces = Thread.getAllStackTraces();
+							}
 							Map names = getCurrentThreadNames(traces.keySet());
 							_warnTraces.put(thread, traces);
 						}
-						if (time > maximumRequestErrorTime/2 && _errorTraces.get(thread) == null) {
-							Map traces = Thread.getAllStackTraces();
+						if (time > _maximumRequestErrorTime/2 && _errorTraces.get(thread) == null) {
+							if(traces == null) {
+								traces = Thread.getAllStackTraces();
+							}
 							Map names = getCurrentThreadNames(traces.keySet());
 							_errorTraces.put(thread, traces);
 							_errorTracesNames.put(thread, names);
 						}
-						if (time > maximumRequestFatalTime && _fatalTraces.get(thread) == null) {
-							Map traces = Thread.getAllStackTraces();
+						if (time > _maximumRequestFatalTime && _fatalTraces.get(thread) == null) {
+							if(traces == null) {
+								traces = Thread.getAllStackTraces();
+							}
 							Map names = getCurrentThreadNames(traces.keySet());
 							_fatalTraces.put(thread, traces);
 							_fatalTracesNames.put(thread, names);
 							String message = "Request is taking too long, possible deadlock: " + time + " ms ";
-							message += stringFromTraces(traces, names);
+							message += stringFromTracesAndNames(traces, names);
 							message += "EC info:\n" + ERXEC.outstandingLockDescription();
 							message += "OSC info:\n" + ERXObjectStoreCoordinator.outstandingLockDescription();
 							log.fatal(message);
+                            deadlocksCount++;
 						}
 					}
 				}
+                listener.deadlock(deadlocksCount);
 			}
 		}
 
