@@ -879,7 +879,7 @@ public class MemcachedClient {
 	 * @return true/false indicating success
 	 */
 	public boolean storeCounter( String key, long counter ) {
-		return set( "set", key, new Long( counter ), null, null, true );
+		return set( "set", key, Long.valueOf(counter), null, null, true );
 	}
 
 	/** 
@@ -977,7 +977,7 @@ public class MemcachedClient {
 	 * @return value of incrementer
 	 */
 	public long addOrIncr( String key, long inc, Integer hashCode ) {
-		boolean ret = set( "add", key, new Long( inc ), null, hashCode, true );
+		boolean ret = set( "add", key, Long.valueOf(inc), null, hashCode, true );
 
 		if ( ret ) {
 			return inc;
@@ -1017,7 +1017,7 @@ public class MemcachedClient {
 	 * @return value of incrementer
 	 */
 	public long addOrDecr( String key, long inc, Integer hashCode ) {
-		boolean ret = set( "add", key, new Long( inc ), null, hashCode, true );
+		boolean ret = set( "add", key, Long.valueOf(inc), null, hashCode, true );
 
 		if ( ret ) {
 			return inc;
@@ -1383,6 +1383,9 @@ public class MemcachedClient {
 							log.error( "++++ ClassNotFoundException thrown while trying to deserialize for key: " + key, e );
 							throw new NestedIOException( "+++ failed while trying to deserialize for key: " + key, e );
 						}
+						finally {
+							ois.close();
+						}
 					}
 				}
 				else if ( END.equals( line ) ) {
@@ -1725,6 +1728,9 @@ public class MemcachedClient {
 
 						log.error( "++++ ClassNotFoundException thrown while trying to deserialize for key: " + key, e );
 						throw new NestedIOException( "+++ failed while trying to deserialize for key: " + key, e );
+					}
+					finally {
+						ois.close();
 					}
 				}
 
