@@ -6,6 +6,11 @@ import java.text.SimpleDateFormat;
 import java.util.Calendar;
 import java.util.Date;
 
+import org.joda.time.DateTime;
+import org.joda.time.LocalDate;
+import org.joda.time.format.DateTimeFormat;
+import org.joda.time.format.DateTimeFormatter;
+
 import com.webobjects.eoaccess.EOAttribute;
 import com.webobjects.eoaccess.EOEntityClassDescription;
 import com.webobjects.eocontrol.EOClassDescription;
@@ -84,6 +89,9 @@ public class ERXRestUtils {
 		else if (Calendar.class.isAssignableFrom(valueType)) {
 			primitive = true;
 		}
+		else if (LocalDate.class.isAssignableFrom(valueType)) {
+			primitive = true;
+		}
 		else if (Enum.class.isAssignableFrom(valueType)) {
 			primitive = true;
 		}
@@ -115,8 +123,10 @@ public class ERXRestUtils {
 			}
 		}
 		else if (value instanceof Date) {
-			Date date = (Date) value;
 			formattedValue = ERXRestUtils.dateFormat(false, context).format(value);
+		}
+		else if (value instanceof LocalDate) {
+			formattedValue = ERXRestUtils.jodaLocalDateFormat(false, context).print((LocalDate)value);
 		}
 		else if (value instanceof NSData && ((NSData)value).length() == 24) {
 			formattedValue = NSPropertyListSerialization.stringFromPropertyList(value);
@@ -169,6 +179,26 @@ public class ERXRestUtils {
 		return dateFormatter;
 	}
 	
+	protected static DateTimeFormatter jodaLocalDateFormat(boolean spaces, ERXRestContext context) {
+		DateTimeFormatter dateFormatter = (DateTimeFormatter)context.userInfoForKey("er.rest.jodaFormatter");
+		if (dateFormatter == null) {
+			String dateFormat = (String)context.userInfoForKey("er.rest.jodaFormat");
+			if (dateFormat == null) {
+				dateFormat = ERXProperties.stringForKey("er.rest.jodaFormat");
+				if (dateFormat == null) {
+					if (spaces) {
+						dateFormat = ERXProperties.stringForKeyWithDefault("er.rest.jodaFormat.secondary", "yyyy-MM-dd HH:mm:ss z");
+					}
+					else {
+						dateFormat = ERXProperties.stringForKeyWithDefault("er.rest.jodaFormat.primary", "yyyy-MM-dd'T'HH:mm:ss'Z'");
+					}
+				}
+			}
+			dateFormatter = DateTimeFormat.forPattern(dateFormat);
+		}
+		return dateFormatter;
+	}
+	
 	@SuppressWarnings("unchecked")
 	public static Object coerceValueToTypeNamed(Object value, String valueTypeName, ERXRestContext context, boolean resolveEntities) {
 		Object parsedValue;
@@ -208,7 +238,7 @@ public class ERXRestUtils {
 			parsedValue = ERXValueUtilities.BooleanValueWithDefault(value, null);
 		}
 		else if (valueType != null && Character.class.isAssignableFrom(valueType)) {
-			parsedValue = new Character(((String) value).charAt(0)); // MS: Presumes String
+			parsedValue = Character.valueOf(((String) value).charAt(0)); // MS: Presumes String
 		}
 		else if (valueType != null && Byte.class.isAssignableFrom(valueType)) {
 			parsedValue = Byte.valueOf((String) value); // MS: Presumes String
@@ -243,13 +273,13 @@ public class ERXRestUtils {
 				boolean spaces = strValue.indexOf(' ') != -1;
 				String rfcFormat = ERXProperties.stringForKeyWithDefault("er.rest.rfcDateFormat", "rfc822");					
 				if ("rfc3339".equals(rfcFormat)) {
-					SimpleDateFormat formatter = null;
+					SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ssZ");
 					java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("(.*[\\-,\\+]{1}[0-9]{1,2}):([0-9]{1,2})");
 					java.util.regex.Matcher matcher = pattern.matcher(strValue);
 					if (matcher.matches()) {
 						try {
 							strValue = matcher.group(1) + matcher.group(2);
-							parsedValue = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ssZ").parseObject(strValue);
+							parsedValue = formatter.parseObject(strValue);
 							if (parsedValue instanceof java.util.Date) {
 								parsedValue = new NSTimestamp((Date)parsedValue);
 							} 
@@ -304,6 +334,28 @@ public class ERXRestUtils {
 				}
 			}
 		}
+		else if (valueType != null && LocalDate.class.isAssignableFrom(valueType)) {
+			if (value instanceof NSTimestamp) {
+				parsedValue = value;
+			}
+			else {
+				String strValue = (String) value;
+				DateTimeFormatter formatter = null;
+				try {
+					boolean spaces = strValue.indexOf(' ') != -1;
+					formatter = ERXRestUtils.jodaLocalDateFormat(spaces, context);
+					parsedValue = new LocalDate((DateTime)formatter.parseDateTime(strValue));
+				}
+				catch (Throwable t) {
+					String msg = "Failed to parse '" + strValue + "' as a timestamp";
+					if (formatter != null) {
+						msg += " (example: " + formatter.print(new LocalDate()) + ")";
+					}
+					msg += ".";
+					throw new IllegalArgumentException(msg, t);
+				}
+			}
+		}
 		else if (valueType != null && Enum.class.isAssignableFrom(valueType)) {
 			parsedValue = ERXValueUtilities.enumValueWithDefault(value, (Class<? extends Enum>) valueType, null);
 		}
@@ -338,7 +390,6 @@ public class ERXRestUtils {
 	public static Object coerceValueToAttributeType(Object value, EOClassDescription parentEntity, Object parentObject, String attributeName, ERXRestContext context) {
 		NSKeyValueCoding._KeyBinding binding = NSKeyValueCoding.DefaultImplementation._keyGetBindingForKey(parentObject, attributeName);
 		Class<?> valueType = binding.valueType();
-
 		try {
 			Object parsedValue;
 			if (value == null || ERXValueUtilities.isNull(value) || (value instanceof String && ((String) value).length() == 0)) {
